[tool.poetry]
name = "fakegrid"
version = "0.1.0"
description = "A SQLAlchemy powered shotgun_api3 emulation. Mock shotgun with SQLite or Postgres."
authors = ["Austin Witherspoon <contact@austinwitherspoon.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
SQLAlchemy = "^2"
typing-extensions = "^4"
shotgun-api3 = "^3"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7"
ruff = "^0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
    "integration",
]